--- a/Android Studio Project/app/build.gradle
+++ b/Android Studio Project/app/build.gradle
@@ -21,9 +21,13 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support.constraint:constraint-layout:1.1.3'
+    compile 'com.android.support:design:25.4.0'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
+    compile 'io.github.controlwear:virtualjoystick:1.10.1'
+
     testCompile 'junit:junit:4.12'
 }
